# Coursera_Yandex_MIPT_CPP

./: CMakeLists.txt
1_White/Week 1/: A + B.cpp  binary_numbers.cpp  equation.cpp  greatest_common_divisor.cpp  min_string.cpp  practice_1.cpp  second_occurance.cpp
1_White/Week 2/: bus_stops_1.cpp  bus_stops_2.cpp  bus_stops_3.cpp  factorial.cpp  monthly_tasks.cpp  move_strings.cpp  palindrome_filter.cpp  practice_2.cpp  queue.cpp  reverse.cpp  synonyms.cpp
1_White/Week 3/: absolute_value_sorting.cpp  case_insensitive_sorting.cpp  incognizable.cpp  names_and_surnames_1.cpp  names_and_surnames_2.cpp  names_and_surnames_3.cpp  reversible_string.cpp  sorted_strings.cpp
1_White/Week 4/: ensure_equal.cpp  files_1.cpp  files_2.cpp  invertible_function.cpp  invertible_function_multiplication_division.cpp  lecture_title.cpp  output_with_precision.cpp  rational_calculator.cpp  rational_eq_add_sub.cpp  rational_interface.cpp  rational_io.cpp  rational_map.cpp  rational_mult_div.cpp  rational_throw.cpp  reading_printing_table.cpp  students_list.cpp  time_server.cpp
1_White/Week 5/: final (2 attempt).cpp  final.cpp
2_Yellow/Week 1/: average_temperature_2.cpp  blocks_mass.cpp  reference_for_element.cpp  template_sqr.cpp
2_Yellow/Week 3/: phone_number.cpp  sum_reverse_sort.cpp
2_Yellow/Week 4/: build_expression.cpp  build_expression_no_brackets.cpp  char_prefix_grouping.cpp  enumeration_of_permutations.cpp  find_greater_elements.cpp  merge_sort.cpp  split_into_words.cpp  string_prefix_groupping.cpp
2_Yellow/Week 5/: handmade_inheritance.cpp  notifications_sending.cpp  (+2 more)
(+44 files in other folders)
